--- a/src/components/map.css
+++ b/src/components/map.css
@@ -35,7 +35,16 @@
     height: 150px;
     width: 150px;
 }
+.close-btn button {
+    text-align: right;
+    background-color: yellow;
+    color: black;
+    font-weight: bold;
+    border: none !important;
+    /* border-radius: 10px;
+    margin-bottom: 2px; */
 
+}
 @media screen and (max-width: 600px) { 
     .map_legend_infosee {
         position: absolute;
@@ -49,6 +58,28 @@
         border-radius: 5px;
         box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         z-index: 2;
+    
+    }
+    .map_legend_infosee {
+        position: absolute;
+        top: 170px;
+        /* Adjust top position as needed */
+        left: 10px;
+        /* Adjust left position as needed */
+        background-color: white;
+        padding: 5px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        z-index: 2;
+    
+    }
+    .close-btn button {
+     
+        font-weight: normal;
+        border: none !important;
+        font-size: 13px;
+       
     
     }
  }
@@ -74,9 +105,10 @@
     width: 100%;
     /* Adjust left position as needed */
     /* background-color: white; */
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
+    /* padding: 10px; */
+    /* padding: 10px; */
+    /* border: 1px solid #ccc; */
+    /* border-radius: 5px; */
     /* position: sticky; */
     
     z-index: 9;
@@ -105,16 +137,7 @@
 
 }
 
-.close-btn button {
-    text-align: right;
-    background-color: red;
-    color: #fff;
-    font-weight: bold;
-    border: none !important;
-    border-radius: 10px;
-    margin-bottom: 10px;
 
-}
 
 .table-title {
     font-size: 12px;
