contact page add

--- a/src/components/map.css
+++ b/src/components/map.css
@@ -45,6 +45,9 @@
 
 
 }
+.description{
+    font-size: 12px;
+}
 @media screen and (max-width: 600px) { 
     .map_legend_infosee {
         position: absolute;
