--- a/src/components/slider/Slider.css
+++ b/src/components/slider/Slider.css
@@ -1,17 +1,15 @@
-#slider {
-    height: 100%;
-  }
-  html,
-  body {
-    position: relative;
-    height: 100%;
-  }
-  
 
-  
+  .swiper-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet, .swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet {
+    margin: 0 var(--swiper-pagination-bullet-horizontal-gap, 4px);
+    font-size: 95px;
+    width: 20px !important;
+    height: 20px !important;
+    background: #01030ff5 !important;
+}
   .swiper {
     width: 100%;
-    height: 100%;
+    height: 100vh;
+  
   }
   
   .swiper-slide {
@@ -19,7 +17,7 @@
     font-size: 18px;
     background: #fff;
   
-   
+    /* Center slide text vertically */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -28,7 +26,19 @@
   .swiper-slide img {
     display: block;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     object-fit: cover;
   }
-  
+  @media (max-width: 600px) {
+    .swiper {
+      width: 100%;
+      height: 100%;
+    
+    }
+    .swiper-slide img {
+      display: block;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
