--- a/src/components/map.css
+++ b/src/components/map.css
@@ -10,9 +10,9 @@
 .map_legend_infosee {
     position: absolute;
     top: 200px;
-    /* Adjust top position as needed */
+    
     left: 10px;
-    /* Adjust left position as needed */
+   
     background-color: white;
     padding: 10px;
     border: 1px solid #ccc;
@@ -20,6 +20,10 @@
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     z-index: 2;
 
+}
+.leaflet-marker-icon .leaflet-zoom-animated .leaflet-interactive {
+    border: none !important;
+    outline: none !important;
 }
 .leaflet-mini-map{
     position: absolute;
