--- a/src/components/map.css
+++ b/src/components/map.css
@@ -104,6 +104,7 @@
     /* border: 1px solid #ccc; */
     /* border-radius: 5px; */
     /* position: sticky; */
+    text-align: center;
     
     z-index: 9;
 }
