--- a/src/components/map.css
+++ b/src/components/map.css
@@ -2,17 +2,18 @@
     height: 100vh;
     z-index: 1;
 }
-
+.logo{
+    width: 130px;
+    height: 100px;
+}
 .map-containersee {
     position: relative;
 }
 
-.map_legend_infosee {
+/* .map_legend_infosee {
     position: absolute;
     top: 200px;
-    
     left: 10px;
-   
     background-color: white;
     padding: 10px;
     border: 1px solid #ccc;
@@ -20,10 +21,35 @@
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     z-index: 2;
 
+} */
+
+
+
+.map_legend_infosee {
+    position: absolute;
+    top: 200px;
+    left: 10px;
+
+   background-color: #fff;
+    padding: 0px !important;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    z-index: 2;
 }
 .leaflet-marker-icon .leaflet-zoom-animated .leaflet-interactive {
     border: none !important;
     outline: none !important;
+  
+        margin-left: -12px;
+        margin-top: -41px;
+        width: 25px;
+        height: 41px;
+        transform: none !important;
+        z-index: 323;
+        outline-style: none;
+   
+    
 }
 .leaflet-mini-map{
     position: absolute;
@@ -63,7 +89,7 @@
         padding: 0px;
         /* border: 1px solid #ccc; */
         border-radius: 5px;
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        box-shadow: 0 2px 1px rgba(0, 0, 0, 0.1);
         z-index: 2;
     
     }
@@ -74,6 +100,10 @@
         font-size: 13px;
        
     
+    }
+    .logo{
+        width: 100px;
+        height: 80px;
     }
  }
  @media (min-width: 768px) {
