--- a/src/page/MapDetails.css
+++ b/src/page/MapDetails.css
@@ -3,3 +3,13 @@
   filter: blur(3px);
   -webkit-filter: blur(3px);
 }
+.details-img{
+  width: 100%;
+  height: 700px;
+}
+@media screen and (max-width: 600px) { 
+  .details-img{
+    width: 100%;
+    height: 100%;
+  }
+}
