--- a/src/components/map.css
+++ b/src/components/map.css
@@ -2,56 +2,48 @@
     height: 100vh;
     z-index: 1;
 }
-.logo{
+
+a {
+    text-decoration: none !important;
+color: black !important;
+}
+
+.logo {
     width: 130px;
     height: 100px;
 }
+
 .map-containersee {
     position: relative;
 }
-
-/* .map_legend_infosee {
-    position: absolute;
-    top: 200px;
-    left: 10px;
-    background-color: white;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    z-index: 2;
-
-} */
-
-
 
 .map_legend_infosee {
     position: absolute;
     top: 200px;
     left: 10px;
 
-   background-color: #fff;
+    background-color: #fff;
     padding: 0px !important;
     border: 1px solid #ccc;
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     z-index: 2;
 }
+
 .leaflet-marker-icon .leaflet-zoom-animated .leaflet-interactive {
     border: none !important;
     outline: none !important;
-  
-        margin-left: -12px;
-        margin-top: -41px;
-        width: 25px;
-        height: 41px;
-        transform: none !important;
-        z-index: 323;
-        outline-style: none;
-   
-    
+
+    margin-left: -12px;
+    margin-top: -41px;
+    width: 25px;
+    height: 41px;
+    transform: none !important;
+    z-index: 323;
+    outline-style: none;
 }
-.leaflet-mini-map{
+
+.leaflet-mini-map {
     position: absolute;
     top: 75%;
     left: 2%;
@@ -59,12 +51,13 @@
     padding: 8px;
     border: 5px solid #fff;
     border-radius: 5px;
-    box-shadow: 0 1px 1px rgba(0,0,0,0.12), 0 2px 2px rgba(0,0,0,0.12), 0 4px 4px rgba(0,0,0,0.12), 0 8px 8px rgba(0,0,0,0.12), 0 16px 16px rgba(0,0,0,0.12);
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.12), 0 2px 2px rgba(0, 0, 0, 0.12), 0 4px 4px rgba(0, 0, 0, 0.12), 0 8px 8px rgba(0, 0, 0, 0.12), 0 16px 16px rgba(0, 0, 0, 0.12);
 
     z-index: 999;
     height: 150px;
     width: 150px;
 }
+
 .close-btn button {
     text-align: right;
     background-color: #90A77B;
@@ -72,53 +65,51 @@
     font-weight: bold;
     border: none !important;
     border-radius: 5px;
-
-
 }
-.description{
+
+.description {
     font-size: 12px;
 }
-@media screen and (max-width: 600px) { 
+
+@media screen and (max-width: 600px) {
     .map_legend_infosee {
         position: absolute;
         top: 160px;
-        /* Adjust top position as needed */
         left: 10px;
-        /* Adjust left position as needed */
         background-color: white;
         padding: 0px;
-        /* border: 1px solid #ccc; */
         border-radius: 5px;
         box-shadow: 0 2px 1px rgba(0, 0, 0, 0.1);
         z-index: 2;
-    
+
     }
+
     .close-btn button {
-     border-radius: 5px;
+        border-radius: 5px;
         font-weight: bold;
         border: none !important;
         font-size: 13px;
-       
-    
     }
-    .logo{
+
+    .logo {
         width: 100px;
         height: 80px;
     }
- }
- @media (min-width: 768px) {
-    .desktop-map{
-      height: 100vh;
-      background-color: lightblue;
+}
+
+@media (min-width: 768px) {
+    .desktop-map {
+        height: 100vh;
+        background-color: lightblue;
     }
-  }
-  
-  @media (max-width: 600px) {
+}
+
+@media (max-width: 600px) {
     .mobile-map {
-      height: 100vh;
-      background-color: lightblue;
+        height: 100vh;
+        background-color: lightblue;
     }
-  }
+}
 
 .header {
     /* position: absolute; */
@@ -135,7 +126,7 @@
     /* border-radius: 5px; */
     /* position: sticky; */
     text-align: center;
-    
+
     z-index: 9;
 }
 
