--- a/src/components/mainpage/Blog.css
+++ b/src/components/mainpage/Blog.css
@@ -124,6 +124,19 @@
       padding-left: 10px;
     }
   }
+  .blog-img{
+    width: 100%;
+    height: 280px;
+  }
+
 @media only screen and (max-width : 768px) {
   .item .icon{position: relative; top: 0; left:0;}
+}
+
+
+@media only screen and (max-width : 600px) {
+  .blog-img{
+    width: 100%;
+    height: 210px;
+  }
 }
