--- a/src/components/mainpage/MapSection.css
+++ b/src/components/mainpage/MapSection.css
@@ -11,9 +11,27 @@ left: 50%;
 padding: 10px  10px 10px 10px;
 font-size: 22px;
 }
+.map-images{
+    width: 100%;
+    height: 700px;
+}
+@media only screen and (max-width: 768px) {
+    .view-map{
+        padding: 10px  10px 10px 10px;
+        font-size: 15px;
+        }
+        .map-images{
+            width: 100%;
+            height: 600px;
+        }
+  }
 @media only screen and (max-width: 600px) {
     .view-map{
         padding: 10px  10px 10px 10px;
         font-size: 15px;
+        }
+        .map-images{
+            width: 100%;
+            height: 200px;
         }
   }
